# IPZ-2024

./: Звіт практика Глушко Анна.docx  Щоденник практики Глушко.docx
IPZ-31/: 2_Vladyslav
IPZ-31/14_Volodymyr/: lamba_number9.cpp
IPZ-33/15_Valeriia/Task 1/: Task 1.py
IPZ-33/15_Valeriia/Task 2/: 1.py  10.py  11.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
IPZ-33/15_Valeriia/Task 3 /: README.md  main.py  menu.json  menu_data.py  test.py
Practice 2/: Text.html
Task-1/: README.md  main1.py.py  python quest 1.py
Task-2/: README.md  main.py
Task-3/: README.md  main.py
Практика/IPZ-32/13_Rostyslav/: pr1.py  pr2.py  pr3.py  Звіт_практика_Шевченко_Ростислав_ІПЗ-32.docx  Щоденник практики Шевченко Ростислав.docx
Практика/IPZ-32/13_Rostyslav/Task1/: README.md
Практика/IPZ-32/13_Rostyslav/Task2/: README.md  pr2.1.py  pr2.2.py  pr2.3.py  pr2.4.py
Практика/IPZ-32/13_Rostyslav/Task3/: README.md
Практика/IPZ-32/5_Heorhiy/: python quest 1.py  python quest 2.rar
Практика/IPZ-32/Vladyslav_K/: FirstTask.py
Практика/IPZ-32/Vladyslav_K/Task2(NEW)/: main.py
Практика/IPZ-33/: 21_Mykhailo
Практика/IPZ-33/17_Anastasiia/task 1/: task 1 Стешенко.py
Практика/IPZ-33/17_Anastasiia/task 2/: task2_1 Cтешенко.py  task2_2 Стешенко.py
Практика/IPZ-33/17_Anastasiia/task 3/: task3.py
Практика/IPZ-33/21_Yatkevich/task1/: main.py
Практика/IPZ-33/21_Yatkevich/task2/: main.py
Практика/IPZ-33/21_Yatkevich/task3/: .gitignore  README.md  main.py  pyproject.toml
Практика/IPZ-33/8_Tymur/Task1/: project1.py
Практика/IPZ-33/8_Tymur/Task2/: task2_3.py
