[tool.poetry]
name = "book library api"
version = "0.1.0"
description = ""
authors = ["DownToTwo <yourf1493@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.115.8"}
uvicorn = {extras = ["all"], version = "^0.34.0"}
sqlalchemy = "^2.0.37"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
